--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
